// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top"
  >
    <input
      className="settings-large-input"
      id="key"
      maxLength={40}
      name="key"
      onChange={[Function]}
      size={50}
      type="text"
      value="key"
    />
  </div>
</div>
`;

exports[`should render correctly: optional 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
  </div>
  <div
    className="settings-definition-right big-padded-top"
  >
    <input
      className="settings-large-input"
      id="key"
      maxLength={40}
      name="key"
      onChange={[Function]}
      size={50}
      type="text"
      value="key"
    />
  </div>
</div>
`;

exports[`should render correctly: secret 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top"
  >
    <div>
      <p>
        settings.almintegration.form.secret_field
      </p>
      <ButtonLink
        onClick={[Function]}
      >
        settings.almintegration.form.update_secret_field
      </ButtonLink>
    </div>
  </div>
</div>
`;

exports[`should render correctly: textarea 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top"
  >
    <textarea
      className="settings-large-input"
      id="key"
      maxLength={40}
      onChange={[Function]}
      required={true}
      rows={5}
      value="key"
    />
  </div>
</div>
`;

exports[`should render correctly: with help 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
    <div
      className="markdown small spacer-top"
    >
      help
    </div>
  </div>
  <div
    className="settings-definition-right big-padded-top"
  >
    <input
      className="settings-large-input"
      id="key"
      maxLength={40}
      name="key"
      onChange={[Function]}
      size={50}
      type="text"
      value="key"
    />
  </div>
</div>
`;
